// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NetsuiteAccountingProviderContent Integration Tests WHEN rendering the component THEN should render a matching snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center gap-1"
    >
      <label
        class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
        data-test="captionHl"
        for="accountingCustomer.accountingCustomerId"
      >
        <span
          class="flex flex-row gap-1"
        >
          NetSuite customer ID
        </span>
      </label>
    </div>
    <div
      class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
    >
      <div
        class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
      >
        <input
          aria-invalid="false"
          class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
          id="accountingCustomer.accountingCustomerId"
          name="accountingCustomer.accountingCustomerId"
          placeholder="Type a NetSuite customer ID"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
        >
          <legend
            class=css-hash-MuiNotchedOutlined-root
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <label
    class="flex flex-col cursor-pointer"
    data-test="checkbox-accountingCustomer.syncWithProvider"
    for=:r-mui-id:
  >
    <div
      class="mx-0 flex items-start align-middle *:leading-7"
    >
      <div
        class="mr-3 inline-flex items-center pt-1"
      >
        <input
          aria-checked="false"
          aria-labelledby="Create automatically this customer in NetSuite"
          class="absolute m-0 size-0 p-0 opacity-0"
          id=:r-mui-id:
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-white hover:text-grey-200 active:text-grey-300"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height="15"
            rx="3.5"
            stroke="#8C95A6"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
      </div>
      <div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Create automatically this customer in NetSuite
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`NetsuiteAccountingProviderContent Integration Tests WHEN rendering the component THEN should render in edition mode 1`] = `
<div>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center gap-1"
    >
      <label
        class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
        data-test="captionHl"
        for="accountingCustomer.accountingCustomerId"
      >
        <span
          class="flex flex-row gap-1"
        >
          NetSuite customer ID
        </span>
      </label>
    </div>
    <div
      class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
    >
      <div
        class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
      >
        <input
          aria-invalid="false"
          class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
          id="accountingCustomer.accountingCustomerId"
          name="accountingCustomer.accountingCustomerId"
          placeholder="Type a NetSuite customer ID"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
        >
          <legend
            class=css-hash-MuiNotchedOutlined-root
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <label
    class="flex flex-col cursor-pointer"
    data-test="checkbox-accountingCustomer.syncWithProvider"
    for=:r-mui-id:
  >
    <div
      class="mx-0 flex items-start align-middle *:leading-7"
    >
      <div
        class="mr-3 inline-flex items-center pt-1"
      >
        <input
          aria-checked="false"
          aria-labelledby="Create automatically this customer in Test Netsuite Integration"
          class="absolute m-0 size-0 p-0 opacity-0"
          id=:r-mui-id:
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-white hover:text-grey-200 active:text-grey-300"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height="15"
            rx="3.5"
            stroke="#8C95A6"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
      </div>
      <div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Create automatically this customer in Test Netsuite Integration
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`NetsuiteAccountingProviderContent Integration Tests WHEN rendering the component THEN should render with Netsuite integration data 1`] = `
<div>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center gap-1"
    >
      <label
        class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
        data-test="captionHl"
        for="accountingCustomer.accountingCustomerId"
      >
        <span
          class="flex flex-row gap-1"
        >
          NetSuite customer ID
        </span>
      </label>
    </div>
    <div
      class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
    >
      <div
        class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
      >
        <input
          aria-invalid="false"
          class=MuiInputBase-input MuiOutlinedInput-input css-hash-MuiInputBase-input-MuiOutlinedInput-input
          id="accountingCustomer.accountingCustomerId"
          name="accountingCustomer.accountingCustomerId"
          placeholder="Type a NetSuite customer ID"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
        >
          <legend
            class=css-hash-MuiNotchedOutlined-root
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <label
    class="flex flex-col cursor-pointer"
    data-test="checkbox-accountingCustomer.syncWithProvider"
    for=:r-mui-id:
  >
    <div
      class="mx-0 flex items-start align-middle *:leading-7"
    >
      <div
        class="mr-3 inline-flex items-center pt-1"
      >
        <input
          aria-checked="false"
          aria-labelledby="Create automatically this customer in Test Netsuite Integration"
          class="absolute m-0 size-0 p-0 opacity-0"
          id=:r-mui-id:
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-white hover:text-grey-200 active:text-grey-300"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height="15"
            rx="3.5"
            stroke="#8C95A6"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
      </div>
      <div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Create automatically this customer in Test Netsuite Integration
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`NetsuiteAccountingProviderContent Integration Tests WHEN rendering the component THEN should render with initial integration customer 1`] = `
<div>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center gap-1"
    >
      <label
        class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
        data-test="captionHl"
        for="accountingCustomer.accountingCustomerId"
      >
        <span
          class="flex flex-row gap-1"
        >
          NetSuite customer ID
        </span>
      </label>
    </div>
    <div
      class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
    >
      <div
        class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
      >
        <input
          aria-invalid="false"
          class=MuiInputBase-input MuiOutlinedInput-input Mui-disabled css-hash-MuiInputBase-input-MuiOutlinedInput-input
          disabled=""
          id="accountingCustomer.accountingCustomerId"
          name="accountingCustomer.accountingCustomerId"
          placeholder="Type a NetSuite customer ID"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
        >
          <legend
            class=css-hash-MuiNotchedOutlined-root
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <label
    class="flex flex-col"
    data-test="checkbox-accountingCustomer.syncWithProvider"
    for=:r-mui-id:
  >
    <div
      class="mx-0 flex items-start align-middle *:leading-7"
    >
      <div
        class="mr-3 inline-flex items-center pt-1"
      >
        <input
          aria-checked="false"
          aria-labelledby="Create automatically this customer in Test Netsuite Integration"
          class="absolute m-0 size-0 p-0 opacity-0"
          disabled=""
          id=:r-mui-id:
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-white hover:text-grey-200 active:text-grey-300"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height="15"
            rx="3.5"
            stroke="#8C95A6"
            width="15"
            x="0.5"
            y="0.5"
          />
        </svg>
      </div>
      <div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Create automatically this customer in Test Netsuite Integration
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`NetsuiteAccountingProviderContent Integration Tests WHEN user interacts with form fields THEN should display subsidiary field when sync is pre-enabled 1`] = `
<div>
  <div
    class="flex flex-col gap-1"
  >
    <div
      class="flex items-center gap-1"
    >
      <label
        class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
        data-test="captionHl"
        for="accountingCustomer.accountingCustomerId"
      >
        <span
          class="flex flex-row gap-1"
        >
          NetSuite customer ID
        </span>
      </label>
    </div>
    <div
      class=MuiFormControl-root MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
    >
      <div
        class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl css-hash-MuiInputBase-root-MuiOutlinedInput-root
      >
        <input
          aria-invalid="false"
          class=MuiInputBase-input MuiOutlinedInput-input Mui-disabled css-hash-MuiInputBase-input-MuiOutlinedInput-input
          disabled=""
          id="accountingCustomer.accountingCustomerId"
          name="accountingCustomer.accountingCustomerId"
          placeholder="Type a NetSuite customer ID"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
        >
          <legend
            class=css-hash-MuiNotchedOutlined-root
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <label
    class="flex flex-col cursor-pointer"
    data-test="checkbox-accountingCustomer.syncWithProvider"
    for=:r-mui-id:
  >
    <div
      class="mx-0 flex items-start align-middle *:leading-7"
    >
      <div
        class="mr-3 inline-flex items-center pt-1"
      >
        <input
          aria-checked="true"
          aria-labelledby="Create automatically this customer in Test Netsuite Integration"
          checked=""
          class="absolute m-0 size-0 p-0 opacity-0"
          id=:r-mui-id:
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="text-blue-600 hover:text-blue-700 active:text-blue-800"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 4C0 1.79086 1.79086 0 4 0H12C14.2091 0 16 1.79086 16 4V12C16 14.2091 14.2091 16 12 16H4C1.79086 16 0 14.2091 0 12V4Z"
            fill="currentColor"
          />
          <g
            clip-path="url(#clip0)"
          >
            <path
              clip-rule="evenodd"
              d="M6.49994 11C6.59828 11.0001 6.69564 10.9804 6.78625 10.9422C6.87686 10.904 6.95887 10.848 7.02744 10.7775L11.8499 5.85749C11.8976 5.81093 11.9354 5.75532 11.9612 5.69392C11.9871 5.63253 12.0004 5.5666 12.0004 5.49999C12.0004 5.43339 11.9871 5.36745 11.9612 5.30606C11.9354 5.24467 11.8976 5.18906 11.8499 5.14249C11.8035 5.096 11.7484 5.05913 11.6877 5.03396C11.627 5.0088 11.5619 4.99585 11.4962 4.99585C11.4305 4.99585 11.3654 5.0088 11.3047 5.03396C11.244 5.05913 11.1889 5.096 11.1424 5.14249L6.49994 9.88749L4.84994 8.15249C4.75626 8.05937 4.62954 8.0071 4.49744 8.0071C4.36535 8.0071 4.23863 8.05937 4.14494 8.15249C4.09732 8.19906 4.05948 8.25467 4.03365 8.31606C4.00781 8.37745 3.99451 8.44339 3.99451 8.50999C3.99451 8.5766 4.00781 8.64253 4.03365 8.70392C4.05948 8.76532 4.09732 8.82093 4.14494 8.86749L5.96994 10.78C6.11046 10.9207 6.3011 10.9998 6.49994 11Z"
              fill="white"
              fill-rule="evenodd"
            />
          </g>
          <defs>
            <clippath
              id="clip0"
            >
              <rect
                fill="white"
                height="8"
                transform="translate(4 4)"
                width="8"
              />
            </clippath>
          </defs>
        </svg>
      </div>
      <div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Create automatically this customer in Test Netsuite Integration
        </div>
      </div>
    </div>
  </label>
  <div
    class=MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-hash-MuiAutocomplete-root
  >
    <div
      class="flex flex-col gap-1 group/combobox-input"
    >
      <div
        class="flex items-center gap-1"
      >
        <label
          class=MuiTypography-root MuiTypography-captionHl whitespace-pre-line css-hash-MuiTypography-root
          data-test="captionHl"
          for="accountingCustomer.subsidiaryId"
        >
          <span
            class="flex flex-row gap-1"
          >
            Subsidiary
          </span>
        </label>
      </div>
      <div
        class=MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-hash-MuiFormControl-root-MuiTextField-root
      >
        <div
          class=MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-hash-MuiInputBase-root-MuiOutlinedInput-root
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-invalid="false"
            autocapitalize="none"
            autocomplete="off"
            class=MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-hash-MuiInputBase-input-MuiOutlinedInput-input
            id=:r-mui-id:
            name="accountingCustomer.subsidiaryId"
            placeholder="Select and search a subsidiary name or external ID"
            role="combobox"
            spellcheck="false"
            type="text"
            value=""
          />
          <div
            class=MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-hash-MuiInputAdornment-root
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center MuiAutocomplete-clearIndicator hidden css-hash-MuiButtonBase-root-MuiButton-root
              data-test="button"
              tabindex="0"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="close-circle-filled/medium"
                fill="currentColor"
                title="close-circle-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0C3.6 0 0 3.6 0 8C0 12.4 3.6 16 8 16C12.4 16 16 12.4 16 8C16 3.6 12.4 0 8 0ZM10.85 11.85C10.6 11.85 10.35 11.75 10.15 11.55L8 9.4L5.9 11.5C5.5 11.9 4.9 11.9 4.5 11.5C4.1 11.1 4.1 10.5 4.5 10.1L6.6 8L4.5 5.9C4.25 5.65 4.15 5.3 4.25 4.95C4.35 4.6 4.6 4.35 4.95 4.25C5.3 4.15 5.65 4.25 5.9 4.5L8 6.6L10.1 4.5C10.35 4.25 10.7 4.15 11.05 4.25C11.4 4.35 11.65 4.6 11.75 4.95C11.85 5.3 11.75 5.65 11.5 5.9L9.4 8L11.5 10.1C11.7 10.3 11.8 10.55 11.8 10.8C11.85 11.4 11.4 11.85 10.85 11.85Z"
                />
              </svg>
            </button>
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="button"
              tabindex="0"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-up-down/medium"
                fill="currentColor"
                title="chevron-up-down/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.295 12.71C4.19976 12.6169 4.12408 12.5056 4.07241 12.3829C4.02074 12.2601 3.99413 12.1282 3.99413 11.995C3.99413 11.8618 4.02074 11.7299 4.07241 11.6071C4.12408 11.4844 4.19976 11.3731 4.295 11.28C4.48215 11.0953 4.73453 10.9917 4.9975 10.9917C5.26047 10.9917 5.51285 11.0953 5.7 11.28L8 13.905L10.3 11.27C10.4872 11.0853 10.7395 10.9817 11.0025 10.9817C11.2655 10.9817 11.5179 11.0853 11.705 11.27C11.8002 11.3631 11.8759 11.4744 11.9276 11.5971C11.9793 11.7199 12.0059 11.8518 12.0059 11.985C12.0059 12.1182 11.9793 12.2501 11.9276 12.3729C11.8759 12.4956 11.8002 12.6069 11.705 12.7L9.255 15.34L9.06 15.55C8.77875 15.8309 8.3975 15.9887 8 15.9887C7.6025 15.9887 7.22125 15.8309 6.94 15.55L4.295 12.71ZM11.705 3.29C11.8002 3.38313 11.8759 3.49436 11.9276 3.61714C11.9793 3.73992 12.0059 3.87179 12.0059 4.005C12.0059 4.13821 11.9793 4.27008 11.9276 4.39287C11.8759 4.51565 11.8002 4.62687 11.705 4.72C11.5179 4.90474 11.2655 5.00832 11.0025 5.00832C10.7395 5.00832 10.4872 4.90474 10.3 4.72L8 2.095L5.7 4.73C5.51285 4.91474 5.26047 5.01832 4.9975 5.01832C4.73453 5.01832 4.48215 4.91474 4.295 4.73C4.19976 4.63687 4.12408 4.52565 4.07241 4.40286C4.02074 4.28008 3.99413 4.14821 3.99413 4.015C3.99413 3.88179 4.02074 3.74992 4.07241 3.62714C4.12408 3.50436 4.19976 3.39313 4.295 3.3L6.745 0.660002L6.94 0.450002C7.22125 0.169101 7.6025 0.011322 8 0.011322C8.3975 0.011322 8.77875 0.169101 9.06 0.450002L11.705 3.29Z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class=MuiOutlinedInput-notchedOutline css-hash-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline
          >
            <legend
              class=css-hash-MuiNotchedOutlined-root
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;
